# projet_sy40

./: .gitignore  CMakeLists.txt
src/: main.c  struct.h
src/car/: car.c  car.h  car_queue.c  car_queue.h
src/database/: database.c  database.h
src/toll/: display.c  display.h  frequentation_engine.c  frequentation_engine.h  gate.c  gate.h  toll.c  toll.h
src/utils/: concurrent.c  concurrent.h  random.c  random.h  symbols.h
